<resources>
    <string name="app_name">AmmoApp3</string>

    <!-- Titles -->
    <string name="inputHeader">Input</string>
    <string name="componentHeader">Component</string>
    <string name="weaponHeader">Weapon</string>
    <string name="ammunitionHeader">Ammunition</string>
    <string name="calculate">Calculation</string>
    <string name="new_calculation">New Calculation</string>
    <string name="calculation_saved">Saved Calculation</string>
    <string name="calculation_complete">Calculation Complete</string>
    <string name="weapons">Weapons</string>

    <string name="combat">Operation:</string>
    <string name="num_days">Num Days:</string>
    <string name="days">No. Days:</string>
    <string name="operation">Operation type:</string>
    <string name="set_day_and_combat">Set Day and Operation</string>

    <!-- Type, Description, Dodic -->
    <string name="weapon_type">Weapon Type</string>
    <string name="weapon_description">Weapon Description</string>
    <string name="weapon_desc">Weapon Desc:</string>
    <string name="description">Description</string>
    <string name="dodic">Ammo DODIC</string>
    <string name="component_type">Component Type</string>

    <!-- Ammo -->
    <string name="input_ammo">Input Ammo</string>
    <string name="ammo_type">Weapon Ammo:</string>
    <string name="add_another_ammo">Add Another Ammo</string>
    <string name="component_ammo">Component Ammo:</string>


    <!-- Combat Intensity -->
    <string name="training_intensity">Training Intensity (Rnds/wpn/day)</string>
    <string name="security_intensity">Security Intensity (Rnds/wpn/day)</string>
    <string name="sustain_intensity">Sustain Intensity (Rnds/wpn/day)</string>
    <string name="light_assault_intensity">Light Assault Intensity (Rnds/wpn/day)</string>
    <string name="medium_assault_intensity">Medium Assault Intensity (Rnds/wpn/day)</string>
    <string name="heavy_assault_intensity">Heavy Assault Intensity (Rnds/wpn/day)</string>

    <string-array name="combat_types">
        <item name="train">Training</item>
        <item name="security">Security</item>
        <item name="sustain">Sustain</item>
        <item name="light">Light Assault</item>
        <item name="medium">Medium Assault</item>
        <item name="heavy">Heavy Assault</item>
    </string-array>

    <!-- Component -->
    <string name="add_another_component">Add Another Component</string>
    <string name="add_component">Add Component</string>
    <string name="component_description">Add Component Description</string>
    <string name="component_desc">Component Description</string>

    <!-- Buttons -->
    <string name="verify_inputs">Validate All Items</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="add_another_weapon">Add Another Weapon</string>
    <string name="recalculate">New Calculation</string>
    <string name="landing">landing</string>
    <string name="input">Selection</string>
    <string name="add_weapon">Add Weapon</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="reenter">Re-enter</string>

    <!-- Spinner options -->
    <string name="choose_weapon">Weapon By Type and Desc</string>
    <string name="number_of_weapons">Number of Weapons:</string>
    <string name="number_of_days">Number of Days:</string>
    <string name="combat_type">Operation Type:</string>
    <string name="fea_id">FEA ID:</string>


    <!-- Cards -->
    <string name="type_out">Type:</string>
    <string name="fea">FEA:</string>
    <string name="quantity">Quantity:</string>
    <string name="description_out">Description:</string>


    <string name="new_input">New Input</string>
    <string name="ammo_type_out">Ammo type:</string>
    <string name="total">Total</string>
    <string name="dodic_out">DODIC</string>
    <string name="per_weapon">Per Weapon</string>
    <string name="input_componentHeader">Input Component</string>
    <string name="ammo_desc">Ammo desc.</string>
    <string name="tbd">tbd</string>

    <!-- Unclassified -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved_calculations">Saved Calculations</string>
    <string name="weapon_quantity">Type: %1$s</string>
    <string name="original_count">Original Count: %1$s</string>
    <string name="original_values">Original values for </string>
    <string name="update">Update</string>
    <string name="item">Item</string>
    <string name="ammunition">Ammunition</string>
    <string name="calculator">Calculator</string>
    <string name="landing_new_weapon">Enter New Weapon Type</string>
    <string name="done">Done</string>
    <string name="enter_label_to_save_as">Enter Label to Save As</string>
    <string name="select_days_and_combat_type">Select Days and Combat Type:</string>
    <string name="select_weapon_and_quantity">Select Weapon and Quantity:</string>
    <string name="select_component">Select Component:</string>
    <string name="select_ammunition">Select Ammunition:</string>
    <string name="make_default_ammo">Make Default Ammo</string>
    <string name="saved_calculation">Saved Calculation</string>
    <string name="view_calculation">View Calculation</string>
    <string name="modify_saved_calculation">Modify Saved Calculation</string>
    <string name="_55">{55}</string>
    <string name="intensity_here">{intensity here}</string>
    <string name="to_change_original_values">To change original values:</string>
    <string name="to_change_weapon_count">To change weapon count:</string>
    <string name="home">Home</string>
    <string name="save_changes">Save Changes</string>
    <string name="click_card_to_edit_values">Click Card to Edit Values</string>
    <string name="weapon_entered">Weapon Entered:</string>
    <string name="type">Type:</string>
    <string name="weapon_ammunition_entered">Weapon Ammunition Entered:</string>
    <string name="component_entered">Component Entered:</string>
    <string name="component_ammunition_entered">Component Ammunition Entered:</string>
    <string name="_5_56mm_ball_m855a">5.56mm Ball, M855A</string>
    <string name="ab56">AB56</string>
    <string name="_360">360</string>
    <string name="_12240">12240</string>
    <string name="change_count">Change Count:</string>
    <string name="_0">0</string>
    <string name="default_ammo">Default Ammo</string>
    <string name="dodic_colon">DODIC:</string>
    <string name="description_colon">Description:</string>
    <string name="combat_intensity_colon">Combat Intensity:</string>
    <string name="training_colon">Training:</string>
    <string name="security_colon">Security:</string>
    <string name="sustain_colon">Sustain:</string>
    <string name="light_colon">Light:</string>
    <string name="medium_colon">Medium:</string>
    <string name="heavy_colon">Heavy:</string>
    <string name="e0195">E0195</string>
    <string name="_1111">1111</string>
    <string name="_111">111</string>
    <string name="m4_carbine">M4 Carbine</string>
    <string name="view_edit_weapons">View/Edit Weapons</string>
    <string name="select_weapon">Select Weapon</string>
    <string name="edit_weapon">Edit Weapon</string>
    <string name="saved_weapons">Saved Weapons</string>
    <string name="weapon">Weapon:</string>
    <string name="weapon_ammunition">Weapon Ammunition:</string>
    <string name="component">Component:</string>
    <string name="component_ammunition">Component Ammunition</string>
    <string name="weapon_to_delete">Weapon To Delete:</string>


</resources>