<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E7E8F4"
        tools:context="com.intelliteq.fea.ammocalculator.LandingScreenFragment">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/ammunition"

            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/calculator"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/new_input_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            style="@style/GreenButton"
            android:padding="10dp"
            android:text="@string/landing_new_weapon"
            app:layout_constraintEnd_toEndOf="@+id/saved_calculation_button"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="@+id/saved_calculation_button"
            app:layout_constraintTop_toBottomOf="@+id/saved_calculation_button" />

        <Button
            android:id="@+id/new_calculation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/GreenButton"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:text="@string/new_calculation"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/saved_calculation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            style="@style/GreenButton"
            android:padding="10dp"
            android:text="@string/saved_calculation"
            app:layout_constraintEnd_toEndOf="@+id/new_calculation_button"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="@+id/new_calculation_button"
            app:layout_constraintTop_toBottomOf="@+id/new_calculation_button" />

        <Button
            android:id="@+id/edit_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            style="@style/GreenButton"
            android:padding="10dp"
            android:text="@string/view_edit_weapons"
            app:layout_constraintEnd_toEndOf="@+id/new_calculation_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/new_calculation_button"
            app:layout_constraintTop_toBottomOf="@+id/new_input_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>