<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.intelliteq.fea.ammocalculator.component.ComponentFragment">

    <data>

        <variable
            name="componentViewModel"
            type="com.intelliteq.fea.ammocalculator.component.ComponentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E7E8F4">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/inputHeader"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/componentHeader"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <EditText
            android:id="@+id/componentTypeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/component_type"
            android:inputType="text"
            android:text="@={componentViewModel.componentTypeEditText}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/componentDescriptionInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/component_desc"
            android:inputType="text"
            android:text="@={componentViewModel.componentDescriptionEditText}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/componentTypeInput" />

        <Button
            android:id="@+id/add_ammo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"

            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/buttonsColor"
            android:onClick="@{()-> componentViewModel.addComponentAmmo()}"
            android:text="@string/input_ammo"
            android:textColor="#F8F1F1"
            app:layout_constraintEnd_toEndOf="@+id/componentDescriptionInput"
            app:layout_constraintStart_toStartOf="@+id/componentDescriptionInput"
            app:layout_constraintTop_toBottomOf="@+id/componentDescriptionInput" />

        <Button
            android:id="@+id/add_component"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/buttonsColor"
            android:onClick="@{()-> componentViewModel.addAnotherComponent()}"
            android:text="@string/add_another_component"
            android:textColor="#F8F1F1"
            app:layout_constraintEnd_toEndOf="@+id/add_ammo"
            app:layout_constraintStart_toStartOf="@+id/add_ammo"
            app:layout_constraintTop_toBottomOf="@+id/add_ammo" />

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/buttonsColor"
            android:onClick="@{()-> componentViewModel.verifyAll()}"
            android:text="@string/verify_inputs"
            android:textColor="#F8F1F1"
            app:layout_constraintEnd_toEndOf="@+id/add_component"
            app:layout_constraintStart_toStartOf="@+id/add_component"
            app:layout_constraintTop_toBottomOf="@+id/add_component" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>