<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="editSelectedViewModel"
            type="com.intelliteq.fea.ammocalculator.editSelectedWeapon.EditSelectedViewModel" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E7E8F4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_deleteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/edit_weapon"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="#DEE1F6"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="4dp"
            android:text="@string/click_card_to_edit_values"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#121211" />


        <ScrollView
            android:id="@+id/editDeleteScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/scrollLayoutEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="#DEE1F6"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/weapon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#121211" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewEditDeleteWeapon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:backgroundTint="#F1F2FA"
                    android:padding="5dp"

                    app:cardCornerRadius="12dp">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutWeapon_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textViewTypeWeaponEdit"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="16dp"
                            android:gravity="center_vertical"
                            android:text="@string/type"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/textViewTypeDesc_edit"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/layoutWeapon_edit" />

                        <TextView

                            android:id="@+id/textViewTypeDesc_edit"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center_vertical"
                            android:text="@string/description_colon"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            app:layout_constraintBaseline_toBaselineOf="@+id/textViewTypeWeaponEdit"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textViewTypeWeaponEdit" />

                        <TextView
                            android:id="@+id/editWpnType_edit"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="16dp"
                            android:gravity="center_vertical"
                            android:text="@string/tbd"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            app:layout_constraintEnd_toStartOf="@id/editWpnDesc_edit"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textViewTypeWeaponEdit" />

                        <TextView
                            android:id="@+id/editWpnDesc_edit"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center_vertical"
                            android:text="@string/tbd"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            app:layout_constraintBaseline_toBaselineOf="@+id/editWpnType_edit"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/editWpnType_edit" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#DEE1F6"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/weapon_ammunition"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#121211" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerViewAmmoEditDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


                <TextView
                    android:id="@+id/editComponentTextView_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#DEE1F6"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/component"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#121211" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerViewComponentEditDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:id="@+id/editCompAmmoTextView_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#DEE1F6"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/component_ammunition"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#121211" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerViewComponentAmmoEditDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            </LinearLayout>


        </ScrollView>


        <LinearLayout
            android:id="@+id/buttonLayout_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/save_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                style="@style/GreenButton"
                android:text="@string/save"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 />
        </LinearLayout>

    </LinearLayout>
</layout>